outputs_20260330-035133-01ba2c4b/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm_Pwm.h:8,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:12:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxPort.h:226:34: error: conflicting types for 'IfxApApu_ApuConfig'; have 'struct <anonymous>'
  226 | typedef struct { uint32 dummy; } IfxApApu_ApuConfig;
      |                                  ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm_Pwm.h:6:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm.h:8:34: note: previous declaration of 'IfxApApu_ApuConfig' with type 'IfxApApu_ApuConfig'
    8 | typedef struct { uint32 dummy; } IfxApApu_ApuConfig;
      |                                  ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxPort.h:227:34: error: conflicting types for 'IfxApProt_ProtConfig'; have 'struct <anonymous>'
  227 | typedef struct { uint32 dummy; } IfxApProt_ProtConfig;
      |                                  ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm.h:9:34: note: previous declaration of 'IfxApProt_ProtConfig' with type 'IfxApProt_ProtConfig'
    9 | typedef struct { uint32 dummy; } IfxApProt_ProtConfig;
      |                                  ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:25:32: error: 'IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'?
   25 | #define PHASE_U_HS            &IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT   /* U high-side  */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:108:39: note: in expansion of macro 'PHASE_U_HS'
  108 |     output[0].pin                   = PHASE_U_HS;
      |                                       ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:25:32: note: each undeclared identifier is reported only once for each function it appears in
   25 | #define PHASE_U_HS            &IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT   /* U high-side  */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:108:39: note: in expansion of macro 'PHASE_U_HS'
  108 |     output[0].pin                   = PHASE_U_HS;
      |                                       ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:27:32: error: 'IfxEgtm_ATOM0_1_TOUT55_P21_4_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'?
   27 | #define PHASE_V_HS            &IfxEgtm_ATOM0_1_TOUT55_P21_4_OUT   /* V high-side  */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:116:39: note: in expansion of macro 'PHASE_V_HS'
  116 |     output[1].pin                   = PHASE_V_HS;
      |                                       ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:28:32: error: 'IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'?
   28 | #define PHASE_V_LS            &IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT /* V low-side   */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:117:39: note: in expansion of macro 'PHASE_V_LS'
  117 |     output[1].complementaryPin      = PHASE_V_LS;
      |                                       ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:29:32: error: 'IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'?
   29 | #define PHASE_W_HS            &IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT  /* W high-side  */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:124:39: note: in expansion of macro 'PHASE_W_HS'
  124 |     output[2].pin                   = PHASE_W_HS;
      |                                       ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:30:32: error: 'IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT' undeclared (first use in this function); did you mean 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'?
   30 | #define PHASE_W_LS            &IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT /* W low-side   */
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\src\egtm_atom_3_phase_inverter_pwm.c:125:39: note: in expansion of macro 'PHASE_W_LS'
  125 |     output[2].complementaryPin      = PHASE_W_LS;
      |                                       ^~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm_Pwm.h:8,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:3:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxPort.h:226:34: error: conflicting types for 'IfxApApu_ApuConfig'; have 'struct <anonymous>'
  226 | typedef struct { uint32 dummy; } IfxApApu_ApuConfig;
      |                                  ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm_Pwm.h:6:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm.h:8:34: note: previous declaration of 'IfxApApu_ApuConfig' with type 'IfxApApu_ApuConfig'
    8 | typedef struct { uint32 dummy; } IfxApApu_ApuConfig;
      |                                  ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxPort.h:227:34: error: conflicting types for 'IfxApProt_ProtConfig'; have 'struct <anonymous>'
  227 | typedef struct { uint32 dummy; } IfxApProt_ProtConfig;
      |                                  ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_89wg8jjw\include/IfxEgtm.h:9:34: note: previous declaration of 'IfxApProt_ProtConfig' with type 'IfxApProt_ProtConfig'
    9 | typedef struct { uint32 dummy; } IfxApProt_ProtConfig;
      |                                  ^~~~~~~~~~~~~~~~~~~~
